--- a/client/nav.jade
+++ b/client/nav.jade
@@ -12,11 +12,11 @@ template(name='nav')
                 i.large.users.icon
             a.icon.item.tags(href='/tags')
                 i.large.tags.icon
-            a.icon.disabled.item.badges(href='/badges')
+            a.icon.item.badges(href='/badges')
                 i.large.certificate.icon
-            a.icon.disabled.item(href='/images')
+            a.icon.item(href='/images')
                 i.large.image.icon
-            a.icon.disabled.item(href='/videos')
+            a.icon.item(href='/videos')
                 i.large.youtube.icon
             // a.icon.item(href='/events')
             //     i.big.calendar.icon
