--- a/client/site.jade
+++ b/client/site.jade
@@ -147,33 +147,34 @@ template(name='site_page')
                 
                     +comments
                     .ui.small.list.mobile.hidden
+                        .item 
+                            strong #{audience}
                         a.item(href=site_url target="_window")
                             |#{site_url}
                             i.external.icon
                         .item open beta {{ufrom open_beta_date}}
                         .item closed beta {{ufrom closed_beta_date}}
-                        .item launched {{ufrom launch_date}}
+                        if launch_date
+                            .item launched {{ufrom launch_date}}
                         .item state: #{site_state}
                         // .item #{high_resolution_icon_url} high_resolution_icon_url
                         // .item #{favicon_url} favicon_url
-                        .item 
-                            strong #{audience}
                         // .item #{api_site_parameter} api
                         // .item #{site_type} site_type
                         .item main emotion: #{main_emotion}
                         .item new_active_users: #{new_active_users}
                         .item total_users: #{total_users}
                         .item badges_per_minute: #{badges_per_minute}
-                        .item total_badges: #{total_badges}
-                        .item total_votes: #{total_votes}
-                        .item total_comments: #{total_comments}
-                        .item answers_per_minute: #{answers_per_minute}
-                        .item questions_per_minute: #{questions_per_minute}
-                        .item total_answers: #{total_answers}
-                        .item total_accepted: #{total_accepted}
-                        .item total_unanswered: #{total_unanswered}
-                        .item total_questions: #{total_questions}
-                        .item api_revision: #{api_revision}
+                        .item #{total_badges} badges
+                        .item #{total_votes} votes
+                        .item #{total_comments} comments
+                        .item #{answers_per_minute} answers/min
+                        .item #{questions_per_minute} questions/min
+                        .item #{total_questions} questions
+                        .item #{total_answers} answers
+                        .item #{total_accepted} accepted
+                        .item #{total_unanswered} unanswered
+                        // .item api_revision: #{api_revision}
                     if in_dev
                         +array_edit k='tags' d=true
 
