--- a/client/users.jade
+++ b/client/users.jade
@@ -30,9 +30,9 @@ template(name='user_cloud')
         //     //     i.plus.icon
         //     //     | Full Add
         // .ui.hidden.divider
-        // .ui.left.icon.input
-        //     i.search.icon
-        //     input(type='text')
+    .ui.left.icon.fluid.input
+        i.search.icon
+        input.search_username(type='text')
     if selected_tags
         #clear_tags.ui.primary.icon.compact.circular.button
             i.remove.icon
