remove middle aligned row in question page, say site from u and q, remove padded on site

--- a/client/dao.jade
+++ b/client/dao.jade
@@ -352,7 +352,7 @@ template(name='convert')
 
 
 template(name='unselect_tag')
-    a.unselect_tag.ui.black.big.tertiary.button.select_term(href='#')
+    a.unselect_tag.ui.black.compact.circular.large.button.select_term(href='#')
         if term
             img.ui.avatar.compact.image.superzoom(src=term.watson.metadata.image)    
         strong #{this}
