--- a/client/question.jade
+++ b/client/question.jade
@@ -1,7 +1,7 @@
 template(name='stack_page')
     with current_doc
         .ui.stackable.padded.grid
-            .middle.aligned.row
+            .row
                 .four.wide.column.scrolling
                     a.ui.large.fluid.basic.circular.button.say_site(href="/site/#{site}") 
                         i.chevron.left.icon
