--- a/client/users.jade
+++ b/client/users.jade
@@ -17,6 +17,8 @@ template(name='users')
                                 |#{site}
                                 i.grey.marker.icon
                                 |#{location}
+                                each user_tag_agg
+                                    .ui.basic.small.label #{title}
                                 
                                 
                                 
